--- a/wechat-robot/pom.xml
+++ b/wechat-robot/pom.xml
@@ -9,15 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>leetcode</artifactId>
+    <artifactId>wechat-robot</artifactId>
+
     <dependencies>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.3.0-alpha5</version>
-            <scope>compile</scope>
+            <groupId>io.github.biezhi</groupId>
+            <artifactId>wechat-api</artifactId>
+            <version>1.0.6</version>
         </dependency>
     </dependencies>
-
 
 </project>
