--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>leetcode</module>
         <module>written-examination</module>
         <module>wechat-robot</module>
+        <module>java-advance-course</module>
     </modules>
 
 
